--- a/style.css
+++ b/style.css
@@ -1,3 +1,78 @@
-header {
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap');
+
+body {
   background-color: hsl(218, 28%, 13%);
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+}
+
+header {
+  background-color: hsl(217, 28%, 15%);
+  background-image: url(images/bg-curvy-desktop.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  padding-bottom: 200px;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 100%;
+  width: 1200px;
+}
+
+img {
+  max-width: 100%;
+}
+
+/**
+* Header section
+*/
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+.nav-links {
+  display: flex;
+  padding: 0;
+  list-style-type: none;
+}
+
+.nav-links li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  font-family: 'Raleway', sans-serif;
+}
+
+.hero {
+  margin: 20px auto;
+  max-width: 100%;
+  width: 600px;
+  text-align: center;
+}
+
+.hero p {
+  line-height: 1.7;
+  font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+  line-height: 1.5;
+}
+
+.btn {
+  color: #fff;
+  background-image: linear-gradient(
+    to right,
+    hsl(176, 68%, 64%),
+    hsl(198, 60%, 50%)
+  );
+  padding: 18px 80px;
+  border-radius: 50px;
+  border: 0;
+  cursor: pointer;
 }
