--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ p {
 nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 15px;
 }
 
@@ -79,7 +80,7 @@ h1 {
     hsl(176, 68%, 64%),
     hsl(198, 60%, 50%)
   );
-  padding: 18px 80px;
+  padding: 16px 60px;
   border-radius: 50px;
   border: 0;
   cursor: pointer;
@@ -159,6 +160,7 @@ h1 {
 .testimonial .person {
   display: flex;
   margin-top: 30px;
+  align-items: center;
 }
 
 .testimonial .person img {
@@ -176,4 +178,151 @@ h1 {
   font-weight: normal;
   opacity: 0.7;
   margin: 5px 0;
+}
+
+/**
+* Form Section
+*/
+form {
+  width: 800px;
+  max-width: 100%;
+  background-color: hsl(217, 28%, 15%);
+  margin: 0 auto -130px;
+  padding: 40px;
+  position: relative;
+  z-index: 1;
+  border-radius: 5px;
+  box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+form h1 {
+  margin: 0 auto;
+}
+
+form p {
+  margin: 30px 0;
+}
+
+.form-control {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.form-control input {
+  flex: 1;
+  border-radius: 50px;
+  border: 0;
+  padding: 18px 60px;
+  margin: 20px 20px 20px 0;
+}
+
+/**
+* Footer Section
+*/
+footer {
+  background-color: hsl(216, 53%, 9%);
+  padding: 150px 0 50px;
+}
+
+footer .flex {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+
+.footer-section {
+  flex: 1;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.footer-section p {
+  margin: 0 0 0 10px;
+}
+
+.footer-section ul {
+  margin: 0;
+  padding-left: 10px;
+  list-style-type: none;
+}
+
+.footer-section ul li a {
+  color: #fff;
+  display: inline-block;
+  margin-bottom: 15px;
+  text-decoration: none;
+}
+
+.footer-section .social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-section .social-icons a {
+  border: 1px solid #fff;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .btn {
+    width: 100%;
+  }
+
+  .logo {
+    width: 80px;
+  }
+
+  .nav-links li a {
+    padding: 10px;
+  }
+
+  header {
+    background-image: url('images/bg-curvy-mobile.svg');
+    padding-bottom: 0px;
+  }
+
+  .motivation .motivation-img {
+    margin: 0 auto;
+  }
+
+  .testimonials {
+    flex-direction: column;
+  }
+
+  .form-control input {
+    margin: 20px 0;
+  }
+
+  .footer-section {
+    flex: auto;
+    width: 100%;
+  }
+
+  /* footer .flex {
+    flex-direction: column;
+  }
+
+  footer .flex-mini {
+    display: flex;
+    flex-direction: row;
+  }
+
+  footer .flex-mini img {
+    margin-right: 10px;
+  }
+
+  .footer-section .social-icons {
+    justify-content: center;
+    align-items: center;
+  } */
 }
